Added applications endpoint
