# pkg/external/model_enterprise_vulnerability.go
@@ -3,7 +3,7 @@
  *
  * This is the Anchore Enterprise API. It provides additional external API routes and functionality for enterprise users.
  *
- * API version: 0.1.1
+ * API version: 0.2.1
  * Contact: dev@anchore.com
  */
 
@@ -36,6 +36,8 @@ type EnterpriseVulnerability struct {
 	PackageCpe string `json:"package_cpe,omitempty"`
 	// The location (if applicable) of the vulnerable package in the container filesystem
 	PackagePath string `json:"package_path,omitempty"`
+	// Whether a vendor will fix or not fix the vulnerability
+	WillNotFix bool `json:"will_not_fix,omitempty"`
 	// List of Nvd Data objects
 	NvdData []NvdDataObject `json:"nvd_data,omitempty"`
 	// List of Vendor Data objects
